# ChangeLog for dev-ruby/aasm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*aasm-3.0.0 (15 Dec 2011)

  15 Dec 2011; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.0.ebuild:
  Version bump.

  15 Dec 2011; Hans de Graaff <graaff@gentoo.org> -aasm-2.2.0.ebuild,
  -aasm-2.3.0.ebuild:
  Remove old versions.

*aasm-2.3.1 (12 Oct 2011)

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +aasm-2.3.1.ebuild:
  Version bump.

*aasm-2.3.0 (09 Sep 2011)

  09 Sep 2011; Hans de Graaff <graaff@gentoo.org> +aasm-2.3.0.ebuild:
  Version bump.

  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> aasm-2.2.0.ebuild,
  metadata.xml:
  Add x86 keyword.

*aasm-2.2.0 (10 Jun 2011)

  10 Jun 2011; Hans de Graaff <graaff@gentoo.org> +aasm-2.2.0.ebuild,
  +metadata.xml:
  Initial import. Supersedes acts_as_state_machine.
