@@ -3,14 +3,11 @@ Hash: SHA256
 
 DIST aasm-2.3.1.gem 21504 RMD160 8151823dfa1ab064e9274ee62bb9ab08eef57309 SHA1 e47efeb0712f074413b58b28409ed2148fc6831d SHA256 6f513ccd7fbe514bd74a3dfb6757bb3c4909081fcdf389e66623c5a0a124b732
 DIST aasm-3.0.0.gem 21504 RMD160 767e0cb6b998e466f4ec8b4276f60611dfb12a0c SHA1 e20d2e249c02b986c9d2eea6165ea18c4d0fc88c SHA256 4f505de00b0f9f58f6e6975a539cd8983fb4406926a00580e63455c84f3f056c
-EBUILD aasm-2.3.1.ebuild 898 RMD160 e383be3cdf49a7d0d7b05d5553a2fff26740ad34 SHA1 b294987a4c8b18ac9a6795b8cf84514a26fec918 SHA256 47ac4b086dee3c7714925f6226e7dc027d3aeb1306212c09f00caa6a8d37763b
-EBUILD aasm-3.0.0.ebuild 834 RMD160 2127edea13aca48ca679dcc7db45a05d2bbf59d4 SHA1 bb1aaced40a3ff8bf14fe1a84b65fc92a1abf3f1 SHA256 d7c742267e873b0e89d5542a908040aea432f059a7f9f1805c161c01edeb22f0
-MISC ChangeLog 844 RMD160 aff3945562748704e8d2f7191dc0592e29a3e83c SHA1 2aab228432dcdefd77bad8dce0cc4555c8d92932 SHA256 2c15efe95b1d4b07743e78b09e2f51dad91ace906cf9924063070441ae782db5
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST aasm-3.0.3.gem 23040 RMD160 0ef0b379655a8b6eab2954925a18d953b7b67a92 SHA1 43e4ec31f4f062c6e9a49978221244f24d4bfd21 SHA256 653ef148d3211c59f35aa186f9f8c886e27e2a4b737a7ba04da2f72a314c412b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7qDvAACgkQiIP6VqMIqNejegEAjKQQHkfDVkEy056bnFKM0qMP
-YCSi0eu0kmzD7Jp9RNsBAJMT0nq1+mK6tj25+9g/WPC9yxupzK9i/cMdhHN8fcLw
-=OAKE
+iF4EAREIAAYFAk9q0hMACgkQiIP6VqMIqNcdtQD/dT2UyK9n9uaMj9vXhaH5Sl/9
+jjl/0arVBKcycfjel+AA/19JsBUsRX1sg7OWFPonffavvMfE1pQ/rh6ZGLS9V4p/
+=GIm6
 -----END PGP SIGNATURE-----
