@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/aasm
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*aasm-3.0.3 (22 Mar 2012)
+
+  22 Mar 2012; Hans de Graaff <graaff@gentoo.org> +aasm-3.0.3.ebuild:
+  Version bump. Add ruby19 and drop x86 as a consequence.
 
 *aasm-3.0.0 (15 Dec 2011)
 
